--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     
     <maven.compiler.source>21</maven.compiler.source>
     <maven.compiler.target>21</maven.compiler.target>
+    <maven.compiler.release>21</maven.compiler.release>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <junit.version>5.9.3</junit.version>
     <cloudsim.version>7.0.1</cloudsim.version>
@@ -132,6 +133,7 @@
         <configuration>
           <source>21</source>
           <target>21</target>
+          <release>21</release>
           <encoding>UTF-8</encoding>
         </configuration>
       </plugin>
