Add logback-core dependency in pom.xml and refactor App class to improve error handling and application flow. Update AppTest to disable tests affected by System.exit() calls in main method. Enhance HippopotamusOptimizationTest for deterministic behavior and scalability validation.

--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,11 @@
       <artifactId>logback-classic</artifactId>
       <version>1.4.8</version>
     </dependency>
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-core</artifactId>
+      <version>1.4.8</version>
+    </dependency>
 
     <!-- JUnit for testing -->
     <dependency>
